# deadrop

./: API.md  LICENSE  README.md
.github/workflows/: docker-publish.yml
client/: deadrop.sh  install-deps.sh
server/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile
server/src/: config.rs  error.rs  main.rs  routes.rs
server/src/auth/: mod.rs  tests.rs
server/src/db/: mod.rs  tests.rs
server/src/handlers/: challenge.rs  download.rs  mod.rs  notify.rs  retrieve.rs  upload.rs
