[package]
name = "deadrop-server"
version = "0.0.0"
edition = "2024" # Use 2024 edition

[dependencies]
tokio = { version = "1.44", features = ["full"] }
axum = "0.8"
axum-extra = { version = "0.10", features = ["typed-header"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-ring-webpki", "postgres", "uuid", "chrono", "json"] }
envy = "0.4"
dotenvy = "0.15"
uuid = { version = "1.16", features = ["v4"] }
chrono = { version = "0.4", features = ["clock"] }
age = { version = "0.11", features = ["async"] }
base64 = "0.22"
